# nicewebrl-example-xland-LLM-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  config_template.py  data_analysis.ipynb  download_google_data.py  experiment_structure.py  pyproject.toml  rendering.py  requirements.txt  test_llms.py  upload_google_data.py  web_app_assistant.py  xland-assistant.toml  xland-vis.ipynb  xland-visualize.py
