[project]
name = "nicewebrl-xland-llm-assistant"
version = "0.1.0"
description = "XLand LLM Assistant example for NiceWebRL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nicewebrl[xland-assistant] @ git+https://github.com/KempnerInstitute/nicewebrl.git",
    'marimo',
    "matplotlib>=3.10.6",
    "dspy>=3.0.3",
    "certifi>=2025.8.3",
    "ipdb>=0.13.13",
    "nicegui>=2.24.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
